--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
                                       also used to increase  the semantic strucuture of web documents  -->
 
 <script src="script.js"></script>
+<script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siqed505f0ccbfd15fa002018bb29a2e05f9ca8a64c0a3bbd5add395d2556dbfe04", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 </body>
 </html>
