--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <!--Home sections starts-->
  <section class="home">
     <div class="content">
-    <h3>Welcome to Jet & Rest : Where  Global Luxury Awaits Your Journey </h3>
+    <h3>Welcome to Travel Winngs : Where  Global Luxury Awaits Your Journey </h3>
     <p>Discover new places with us, Your E-Booking Adventure Begins Here</p>
     <a href="service.html" class="btn">Discover more</a>
     </div>
