--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
-        <div id="menu-bar" class="fas fa-bars"></div>
-       <a href="#" class="logo"> <h3><span>J</span>et  & <span>R</span>est</h3><p>Flight and Hotel Reservations</p> </a>
+       <div id="menu-bar" class="fas fa-bars"></div>
+        <a href="#" class="logo"> <h3><span>T</span>ravel Wings </h3><p>Flight and Hotel Reservations</p> </a>
+
     
         <nav class="navbar">
             <a href="index.html">Home</a>
