--- a/service.html
+++ b/service.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div id="menu-bar" class="fas fa-bars"></div>
-        <a href="#" class="logo"> <h3><span>J</span>et  & <span>R</span>est</h3><p>Flight and Hotel Reservations</p> </a>
+        <a href="#" class="logo"> <h3><span>T</span>ravel Wings </h3><p>Flight and Hotel Reservations</p> </a>
+    
     
         <nav class="navbar">
             <a href="index.html">Home</a>
