--- a/flight_review.html
+++ b/flight_review.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="review.css">
 </head>
 <body>
-     <div id="menu-bar" class="fas fa-bars"></div>
+    <header>
+        <div id="menu-bar" class="fas fa-bars"></div>
         <a href="#" class="logo"> <h3><span>T</span>ravel Wings </h3><p>Flight and Hotel Reservations</p> </a>
     
     
